Feature: redirection cube

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -31,6 +31,9 @@ permissions:
     portalgun.companion:
         description: Spawn a companion block
         default: op
+    portalgun.redirection:
+        description: Spawn a redirection block
+        default: op
     portalgun.remove.others:
         description: Remove others' portals
         default: op
