--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -34,6 +34,12 @@ permissions:
     portalgun.redirection:
         description: Spawn a redirection block
         default: op
+    portalgun.thermalbeam:
+        description: Get the thermal beam block
+        default: op
+    portalgun.thermalreceiver:
+        description: Get the thermal receiver block
+        default: op
     portalgun.remove.others:
         description: Remove others' portals
         default: op
